# local-whisper

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: handlers.rs  router.rs
backend/src/domain/: mod.rs  models.rs  vad.rs
backend/src/infra/: whisper.rs
frontend/: package-lock.json  package.json
frontend/public/: audio-processor.js
frontend/src/app/: page.tsx
frontend/src/hooks/: useRealtimeTranscription.ts
