[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.0", features = ["full"]}
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candle-core = {version = "0.8.2", features = ["cuda"]}
candle-transformers = "0.8.2"
candle-nn = "0.8.2"
tokenizers = "0.20.0"
hf-hub = "0.4.1"

